--- a/Diary/20170621.md
+++ b/Diary/20170621.md
@@ -1,3 +1,5 @@
-#### 完成了3张表的连接将它们放在一个网页上给出了链接地址
-#### 完善了数据库三页表的增删改查
-#### 将源码上传到GIT仓库
+1 完成了3张表的连接将它们放在一个网页上给出了链接地址
+
+2完善了数据库三页表的增删改查
+
+3 将源码上传到GIT仓库
